# make-tools

./: .gitignore  READMD.md
autoconf/: Makefile  Makefile.am  configure.ac
autoconf/src/: fn.c  fn.h  main.c
